[gd_scene load_steps=21 format=3 uid="uid://b3aaw5pmo811g"]

[ext_resource type="Script" path="res://Scripts/Gnome/gnome_parent.gd" id="1_ge1v0"]
[ext_resource type="Texture2D" uid="uid://eths7xyc3r3o" path="res://Assets/Gnome.png" id="1_wl7an"]
[ext_resource type="Script" path="res://Scripts/Gnome/gnome.gd" id="2_34ve6"]
[ext_resource type="Shader" path="res://Shader/outline.gdshader" id="3_0y3d2"]
[ext_resource type="Texture2D" uid="uid://cst2uw6w05and" path="res://godot.png" id="4_1s35n"]
[ext_resource type="Shader" path="res://Shader/selection.gdshader" id="5_wkn5y"]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_ed6mq"]
radius = 3.0
height = 8.0

[sub_resource type="ShaderMaterial" id="ShaderMaterial_qaynp"]
resource_local_to_scene = true
shader = ExtResource("3_0y3d2")
shader_parameter/width = 0
shader_parameter/outline_color = Color(1, 1, 1, 1)
shader_parameter/flickering_speed = null
shader_parameter/minimal_flickering_alpha = null

[sub_resource type="AtlasTexture" id="AtlasTexture_y8ksn"]
atlas = ExtResource("1_wl7an")
region = Rect2(16, 204, 16, 17)

[sub_resource type="AtlasTexture" id="AtlasTexture_8jvkf"]
atlas = ExtResource("1_wl7an")
region = Rect2(32, 204, 16, 17)

[sub_resource type="AtlasTexture" id="AtlasTexture_pobks"]
atlas = ExtResource("1_wl7an")
region = Rect2(48, 204, 16, 17)

[sub_resource type="AtlasTexture" id="AtlasTexture_rxo8w"]
atlas = ExtResource("1_wl7an")
region = Rect2(0, 136, 16, 17)

[sub_resource type="AtlasTexture" id="AtlasTexture_6fmi5"]
atlas = ExtResource("1_wl7an")
region = Rect2(16, 136, 16, 17)

[sub_resource type="AtlasTexture" id="AtlasTexture_j10vr"]
atlas = ExtResource("1_wl7an")
region = Rect2(0, 136, 16, 17)

[sub_resource type="AtlasTexture" id="AtlasTexture_dqhrk"]
atlas = ExtResource("1_wl7an")
region = Rect2(16, 136, 16, 17)

[sub_resource type="AtlasTexture" id="AtlasTexture_bxfpv"]
atlas = ExtResource("1_wl7an")
region = Rect2(32, 136, 16, 17)

[sub_resource type="AtlasTexture" id="AtlasTexture_ic8ul"]
atlas = ExtResource("1_wl7an")
region = Rect2(48, 136, 16, 17)

[sub_resource type="SpriteFrames" id="SpriteFrames_27cli"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_y8ksn")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_8jvkf")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_pobks")
}],
"loop": true,
"name": &"attack",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_rxo8w")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_6fmi5")
}],
"loop": true,
"name": &"idle",
"speed": 5.0
}, {
"frames": [],
"loop": true,
"name": &"new_animation",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_j10vr")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_dqhrk")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_bxfpv")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ic8ul")
}],
"loop": true,
"name": &"run",
"speed": 10.0
}]

[sub_resource type="CircleShape2D" id="CircleShape2D_fdgbw"]
radius = 16.0

[sub_resource type="ShaderMaterial" id="ShaderMaterial_vk3wf"]
shader = ExtResource("5_wkn5y")
shader_parameter/ring_radius = 0.44
shader_parameter/thickness_scalar = 0.35
shader_parameter/oscillation_scalar = 0.025
shader_parameter/speed = 1.0
shader_parameter/main_color = Color(1, 1, 1, 1)
shader_parameter/lerp_color = Color(1, 1, 1, 1)

[node name="Character" type="Node2D"]
script = ExtResource("1_ge1v0")

[node name="Gnome" type="CharacterBody2D" parent="."]
use_parent_material = true
position = Vector2(0, -8)
collision_layer = 3
collision_mask = 3
input_pickable = true
script = ExtResource("2_34ve6")

[node name="CollisionShape2D" type="CollisionShape2D" parent="Gnome"]
position = Vector2(0, -6)
shape = SubResource("CapsuleShape2D_ed6mq")

[node name="NavigationAgent2D" type="NavigationAgent2D" parent="Gnome"]
path_desired_distance = 1.0
target_desired_distance = 2.0

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="Gnome"]
material = SubResource("ShaderMaterial_qaynp")
sprite_frames = SubResource("SpriteFrames_27cli")
animation = &"idle"
autoplay = "idle"
centered = false
offset = Vector2(-8, -16)

[node name="Area2D" type="Area2D" parent="Gnome"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Gnome/Area2D"]
position = Vector2(0, -6)
shape = SubResource("CircleShape2D_fdgbw")

[node name="TameTimeout" type="Timer" parent="Gnome"]

[node name="Waypoint" type="Sprite2D" parent="."]
visible = false
z_index = -1
material = SubResource("ShaderMaterial_vk3wf")
position = Vector2(0, -10)
scale = Vector2(0.226118, 0.0781745)
texture = ExtResource("4_1s35n")

[connection signal="selected_toggle" from="Gnome" to="." method="_on_player_body_selected_toggle"]
[connection signal="waypoint_changed" from="Gnome" to="." method="_on_player_body_waypoint_changed"]
[connection signal="body_entered" from="Gnome/Area2D" to="Gnome" method="_on_area_2d_body_entered"]
[connection signal="body_exited" from="Gnome/Area2D" to="Gnome" method="_on_area_2d_body_exited"]
[connection signal="timeout" from="Gnome/TameTimeout" to="Gnome" method="_on_tame_timeout_timeout"]
